Create Service.Common, Create Service.Domain, Made first migration

--- a/Service.API/appsettings.Development.json
+++ b/Service.API/appsettings.Development.json
@@ -2,7 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Trace"
     }
+  },
+
+  "ConnectionStrings": {
+    "MainContextDb": "Data Source=MARS;Initial Catalog=MyShop;Integrated Security=True;TrustServerCertificate=True"
   }
 }
