In Serwice.API Create: Dtos, Configuration, AutoMapper, Validators
Add new Project Serwice.WebAPI.Settings

--- a/Service.API/appsettings.Development.json
+++ b/Service.API/appsettings.Development.json
@@ -7,6 +7,11 @@
   },
 
   "ConnectionStrings": {
-    "MainContextDb": "Data Source=MARS;Initial Catalog=MyShop;Integrated Security=True;TrustServerCertificate=True"
+    "MainContextDb": "Data Source=MARS;Initial Catalog=MyShop;Integrated Security=True;TrustServerCertificate=True",
+    "AplicationDb": "Data Source=MARS;Initial Catalog=MyShop;Integrated Security=True;TrustServerCertificate=True"
+  },
+
+  "JwtInfo": {
+    "TokenKey": "Some KeY for JWT tokens"
   }
 }
