--- a/Service.API/Service.API.csproj
+++ b/Service.API/Service.API.csproj
@@ -7,8 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Service.Common.Interfaces\Service.Common.Interfaces.csproj" />
+    <ProjectReference Include="..\Service.Common.Models\Service.Common.Models.csproj" />
+    <ProjectReference Include="..\Service.Common\Service.Common.csproj" />
+    <ProjectReference Include="..\Service.Repository\Service.Repository.csproj" />
+    <ProjectReference Include="..\Service.Services\Service.Services.csproj" />
+    <ProjectReference Include="..\Service.WebAPI.Settings\Service.WebAPI.Settings.csproj" />
   </ItemGroup>
 
 </Project>
